--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       box-sizing: border-box;
     }
   </style>
+  <script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
+
 </head>
 
 <body>
